seed/compiler/tests/snapshots/snapshots__snapshot_sema_null_safety_violations.snap
---
source: compiler/tests/snapshots.rs
expression: "sema_dump(\"fun main() {\\n    val s: String? = null\\n    val n = s.length\\n    val m = s + 1\\n}\")"
---
Error: cannot access '.' on nullable 'String?' (use '?.' instead) @line 3 col 14 to line 4 col 8
Error: cannot apply operator on nullable operands ('String?' / 'Int') @line 4 col 14 to line 5 col 2
